# orchestrator/docs/swagger.yaml
@@ -29,19 +29,23 @@ definitions:
       response:
         $ref: '#/definitions/response.Response'
     type: object
+  worker.Response:
+    properties:
+      id:
+        type: string
+      response:
+        $ref: '#/definitions/response.Response'
+    type: object
 externalDocs:
   description: OpenAPI
-  url: https://swagger.io/resources/open-api/
 host: localhost:8080
 info:
   contact:
     email: support@swagger.io
     name: API Support
-    url: http://www.swagger.io/support
   description: This is a sample server celler server.
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
   title: Swagger Example API
   version: "1.0"
@@ -89,4 +93,19 @@ paths:
       summary: Получение результата по идентификатору
       tags:
       - Calculations
+  /monitoring/worker:
+    get:
+      consumes:
+      - application/json
+      description: Получает количество воркеров доступных для выполнения задачи
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/worker.Response'
+      summary: Получение количества активных воркеров
+      tags:
+      - Monitoring
 swagger: "2.0"
